任意の数まで出力を実装

--- a/fizzbuzz.html
+++ b/fizzbuzz.html
@@ -10,11 +10,9 @@
 <body>
     <h1>fizzbuzzを表示させよう</h1>
     <p>表示させたい数を整数で入力して下さい。（最大999までです）</p>
-    <p><input type="text" id="user-name" size="40" maxlength="3">
-       <button id="assessment">表示する</button>
-    </p>
+    <input type="text" id="number" size="40" maxlength="3">
+    <button id="assessment">表示する</button>
+    <div id="result-area"></div>
     <script src="loop.js"></script>
-    <h3>100までを表示したよ</h3>
-    <h5>fizzbuzzって言ったら改行させてみた</h5>
 </body>
 </html>
